test/bad/nullables/cmp04.px

Bool? b
Char? c
b is c
